--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1 style='size=100rem;'>lllxc.tk</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>lllxc_blog</title>
+		<style type="text/css">
+			*{
+				padding: 0;
+				margin: 0;
+				border: 0;
+			}
+			body{
+				width: 100vw;
+				height: 100vh;
+				background: url(./img/wallhaven-42p26x.png) center fixed no-repeat;
+				background-size: cover;
+			}
+			h1{
+				padding: 18%;
+				text-align: center;
+				font-size: 10rem;
+				color: aquamarine;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="">
+			<h1>lllxc.tk</h1>
+		</div>
+	</body>
+</html>
