--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>lllxc_blog</title>
+		<title>lllxc</title>
 		<style type="text/css">
 			*{
 				padding: 0;
